# unsoundness

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  validate.yml
examples/: callable_ellipsis.py  method_mixup.py
examples/Any/: any.py  callable_ellipsis.py
examples/TypeGuard/: incorrect_typeguard.py  typeguard_not_subtype.py
examples/TypeIs/: incorrect_typeis.py  typeis_float.py  typeis_list_any.py  typeis_narrow_list.py
examples/attributes/: delattr.py
examples/ctx-managers/: error_while_binding.py  exception_swallowing.py
examples/descriptors/: descriptor_in_instance_dict.py  hybrid_descriptor_or_wrapper.py  subclass_adds_dunder_get.py
examples/directives/: cast.py  if_typechecking.py  type_ignore.py
examples/generic/: invariant_attribute.py  mutable_default.py  old_style_typevar_variance.py
examples/metaclasses/: metaclass_attribute.py  metaclass_new.py
examples/narrowing/: attribute_assignment_narrowing.py  attribute_narrowing.py  eq_override.py  isinstance_dict.py  isinstance_list.py  match_mapping.py  narrowing_descriptor_attribute.py  nonlocal_assignment.py
examples/no-footguns/: README.md  typeddict_narrowing.py
examples/overload/: generic_overlap.py  incorrect_impl.py  undetected_overlap.py
examples/override/: child_get.py  init.py  (+1 more)
nonexamples/: bool_override.py  case_insensitive_dict.py  descriptor_shadows_class_var.py  functions_unannotated.py  hex.py  lambda_unannotated.py  protocol_constructor.py  typeddict_mixed_constructor.py  typeddict_narrowing.py  unannotated.py
scripts/: validate.py
(+24 files in other folders)
