[project]
name = "unsoundness"
version = "0.1.0"
description = "Collecting examples of unsoundness in the Python type system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy==1.16.1",
    "pyright==1.1.402",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "I",  # import sorting
]
